kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beta
  labels:
    tenant: beta
    pod-security.kubernetes.io/enforce: baseline
