kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/beta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta-demo
  namespace: beta
  labels:
    app: beta-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beta-demo
  template:
    metadata:
      labels:
        app: beta-demo
    spec:
      serviceAccountName: beta-app-sa
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
