kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beta-demo
  namespace: beta
spec:
  selector:
    app: beta-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
